crates/es-fluent-core/tests/snapshots/enum_skipped_variant_tests__enum_analysis_with_skipped_variants_with_this.snap
---
source: crates/es-fluent-core/tests/enum_skipped_variant_tests.rs
expression: "&infos"
---
[
  FtlTypeInfo(
    type_kind: Enum,
    type_name: "Mixed",
    variants: [
      FtlVariant(
        name: "UnitKept",
        ftl_key: FluentKey("mixed-UnitKept"),
        args: [],
      ),
    ],
  ),
  FtlTypeInfo(
    type_kind: Struct,
    type_name: "Mixed",
    variants: [
      FtlVariant(
        name: "DataKept",
        ftl_key: FluentKey("mixed-DataKept"),
        args: [
          "x",
          "z",
        ],
      ),
      FtlVariant(
        name: "TupKept",
        ftl_key: FluentKey("mixed-TupKept"),
        args: [
          "f1",
          "f2",
        ],
      ),
    ],
  ),
]
